Scaffold: Fix tabbox styling issues on macOS
- Cramped tabs due to insufficient padding (new in fx128)
- Off-center text due to margins (our styles)
- Off-center text due to padding-top (platform styles)

--- a/scss/mac/_tabbox.scss
+++ b/scss/mac/_tabbox.scss
@@ -16,6 +16,7 @@ tabbox {
 				-2px 0px 2px -2px var(--fill-quarternary) inset,
 				-4px 0px 4px -4px var(--fill-quinary) inset;
 			
+			padding-block: 1px;
 			box-shadow: var(--tabbox-tab-shadow);
 
 			&::before {
@@ -81,11 +82,13 @@ tabbox {
 					background: var(--material-button);
 					box-shadow:
 						0px 1px 0.75px 0px var(--fill-quinary),
-						0px 0.25px 0.25px 0px var(--color-border);;
-					border: 0.5px solid var(--fill-senary);
-					padding: 0.5px 6px 0.5px;
-					margin: 0px -0.5px 1px -0.5px;
+						0px 0.25px 0.25px 0px var(--color-border);
+					outline: 0.5px solid var(--fill-senary);
 				}
+			}
+
+			.tab-middle {
+				padding: 2px 8px;
 			}
 		}
 
